SET(IPF_src 
            ${SRCIPF}/abcd.f
            ${SRCIPF}/a_data.f
            ${SRCIPF}/add_bus.f
            ${SRCIPF}/add_cbs.f
            ${SRCIPF}/addcon.f
            ${SRCIPF}/add_eqbrn.f
            ${SRCIPF}/add_eqcbs.f
            ${SRCIPF}/add_name.f
            ${SRCIPF}/add_ptia.f
            ${SRCIPF}/add_ptib.f
            ${SRCIPF}/add_ptim.f
            ${SRCIPF}/add_ptin.f
            ${SRCIPF}/add_ptio.f
            ${SRCIPF}/add_ptiq.f
            ${SRCIPF}/add_ptiz.f
            ${SRCIPF}/addtbxbs.f
            ${SRCIPF}/agcsum.f
            ${SRCIPF}/allocq.f
            ${SRCIPF}/am_date.f
            ${SRCIPF}/anal.f
            ${SRCIPF}/analys.f
            ${SRCIPF}/apdoutbuf.f
            ${SRCIPF}/apinit.f
            ${SRCIPF}/aplli.f
            ${SRCIPF}/apnd_stat.f
            ${SRCIPF}/apovld.f
            ${SRCIPF}/aprlse.f
            ${SRCIPF}/apsoln.f
            ${SRCIPF}/area_dif.f
            ${SRCIPF}/areaintrpt.f
            ${SRCIPF}/area_list.f
            ${SRCIPF}/areasr.f
            ${SRCIPF}/areatotrpt.f
            ${SRCIPF}/a_redchg.f
            ${SRCIPF}/aredifrpt.f
            ${SRCIPF}/arezln.f
            ${SRCIPF}/arsummrpt.f
            ${SRCIPF}/aspar.f
            ${SRCIPF}/assequiv.f
            ${SRCIPF}/asvsec.f
            ${SRCIPF}/atof.f
            ${SRCIPF}/atoi.f
            ${SRCIPF}/baksen.f
            ${SRCIPF}/baksln.f
            ${SRCIPF}/baktrn.f
            ${SRCIPF}/baseinit.f
            ${SRCIPF}/bcddat.f
            ${SRCIPF}/bd0001.f
            ${SRCIPF}/bd0002.f
            ${SRCIPF}/bd0003.f
            ${SRCIPF}/bd0004.f
            ${SRCIPF}/bd0005.f
            ${SRCIPF}/bd0006.f
            ${SRCIPF}/bd0007.f
            ${SRCIPF}/bd0008.f
            ${SRCIPF}/bd0009.f
            ${SRCIPF}/bd0011.f
            ${SRCIPF}/bd0012.f
            ${SRCIPF}/bd0013.f
            ${SRCIPF}/bdloderr.f
            ${SRCIPF}/bdpfdt.f
            ${SRCIPF}/bdprim.f
            ${SRCIPF}/bdtrdb.f
            ${SRCIPF}/bestep.f
            ${SRCIPF}/bld2dc.f
            ${SRCIPF}/bldbsekv.f
            ${SRCIPF}/bldequiv.f
            ${SRCIPF}/bldgdc.f
            ${SRCIPF}/bldltc.f
            ${SRCIPF}/bldmdc.f
            ${SRCIPF}/bldnewown.f
            ${SRCIPF}/bldowner.f
            ${SRCIPF}/bldownint.f
            ${SRCIPF}/bldpct.f
            ${SRCIPF}/bldptitrn.f
            ${SRCIPF}/bldtbx.f
            ${SRCIPF}/bldtie.f
            ${SRCIPF}/bldtrn.f
            ${SRCIPF}/bldxtb.f
            ${SRCIPF}/bldxti.f
            ${SRCIPF}/bldycp.f
            ${SRCIPF}/bldzone.f
            ${SRCIPF}/bldzonint.f
            ${SRCIPF}/blkdta_alt.f
            ${SRCIPF}/blkdta.f
            ${SRCIPF}/bprim.f
            ${SRCIPF}/brchek.f
            ${SRCIPF}/b_redchg.f
            ${SRCIPF}/brn_dif.f
            ${SRCIPF}/brntyp.f
            ${SRCIPF}/brread.f
            ${SRCIPF}/bsanrp.f
            ${SRCIPF}/bsekvhsh.f
            ${SRCIPF}/bsekvlst.f
            ${SRCIPF}/bsread.f
            ${SRCIPF}/btable.f
            ${SRCIPF}/buf_load_alt.f
            ${SRCIPF}/build_gb.f
            ${SRCIPF}/buildzbo.f
            ${SRCIPF}/busbrinrpt.f
            ${SRCIPF}/busbrotrpt.f
            ${SRCIPF}/bus_dif.f
            ${SRCIPF}/busdifrpt.f
            ${SRCIPF}/bus_edt.f
            ${SRCIPF}/buserr.f
            ${SRCIPF}/bus_hash.f
            ${SRCIPF}/bushinit.f
            ${SRCIPF}/businrpt.f
            ${SRCIPF}/bus_list.f
            ${SRCIPF}/busovrpt.f
            ${SRCIPF}/busown.f
            ${SRCIPF}/busqua.f
            ${SRCIPF}/bussen.f
            ${SRCIPF}/bussenrpt.f
            ${SRCIPF}/bus_type.f
            ${SRCIPF}/bustyp.f
            ${SRCIPF}/busuvovrpt.f
            ${SRCIPF}/busuvrpt.f
            ${SRCIPF}/calcflow.f
            ${SRCIPF}/calcintflo.f
            ${SRCIPF}/calsysf.f
            ${SRCIPF}/caltme.c
            ${SRCIPF}/capdifrpt.f
            ${SRCIPF}/capital.f
            ${SRCIPF}/capqlt.f
            ${SRCIPF}/capvlt.f
            ${SRCIPF}/casetxt.f
            ${SRCIPF}/cbus_dif.f
            ${SRCIPF}/cd_proc.f
            ${SRCIPF}/cgetuser.c
            ${SRCIPF}/chacc.f
            ${SRCIPF}/chadd.f
            ${SRCIPF}/change.f
            ${SRCIPF}/chbsis.f
            ${SRCIPF}/chchek.f
            ${SRCIPF}/chdel.f
            ${SRCIPF}/check.f
            ${SRCIPF}/check_name.f
            ${SRCIPF}/check_pq.f
            ${SRCIPF}/chek_bcmd2.f
            ${SRCIPF}/chek_bout.f
            ${SRCIPF}/chek_cmde2.f
            ${SRCIPF}/chek_cmde.f
            ${SRCIPF}/chek_lcmd2.f
            ${SRCIPF}/chek_lout.f
            ${SRCIPF}/chgbty.f
            ${SRCIPF}/chg_error.f
            ${SRCIPF}/chge_type.f
            ${SRCIPF}/chggen.f
            ${SRCIPF}/chglis.f
            ${SRCIPF}/chglisrpt.f
            ${SRCIPF}/chglod.f
            ${SRCIPF}/chgorder.f
            ${SRCIPF}/chgrat.f
            ${SRCIPF}/chk_aredta.f
            ${SRCIPF}/chk_arefld.f
            ${SRCIPF}/chkbch.f
            ${SRCIPF}/chkbrlnk.f
            ${SRCIPF}/chk_brndta.f
            ${SRCIPF}/chkbrn.f
            ${SRCIPF}/chk_brnfld.f
            ${SRCIPF}/chk_busdta.f
            ${SRCIPF}/chk_busfld.f
            ${SRCIPF}/chk_cbsdta.f
            ${SRCIPF}/chk_cbsfld.f
            ${SRCIPF}/chkchdup.f
            ${SRCIPF}/chkerr.f
            ${SRCIPF}/chkfltra.f
            ${SRCIPF}/chkfltr.f
            ${SRCIPF}/chkfltro.f
            ${SRCIPF}/chkfltrz.f
            ${SRCIPF}/chkinv.f
            ${SRCIPF}/chkmet.f
            ${SRCIPF}/chkmzr.f
            ${SRCIPF}/chknet.f
            ${SRCIPF}/chkovflo.f
            ${SRCIPF}/chk_pqdt.f
            ${SRCIPF}/chk_ptib.f
            ${SRCIPF}/chk_tiedta.f
            ${SRCIPF}/chk_tiefld.f
            ${SRCIPF}/chk_xdtdta.f
            ${SRCIPF}/chk_xdtfld.f
            ${SRCIPF}/chmisc.f
            ${SRCIPF}/chmods.f
            ${SRCIPF}/chpct.f
            ${SRCIPF}/chprea.f
            ${SRCIPF}/chread.f
            ${SRCIPF}/chslck.f
            ${SRCIPF}/cknt_cmde.f
            ${SRCIPF}/cktopol2.f
            ${SRCIPF}/ck_topol.f
            ${SRCIPF}/ckzoneup.f
            ${SRCIPF}/clnup_ge.f
            ${SRCIPF}/clnuppti.f
            ${SRCIPF}/close_file.f
            ${SRCIPF}/clustr.f
            ${SRCIPF}/cmde2_head.f
            ${SRCIPF}/cmde2_inp.f
            ${SRCIPF}/cmde2_out.f
            ${SRCIPF}/cmde2_ovld.f
            ${SRCIPF}/cmde2_proc.f
            ${SRCIPF}/cmde2_sum.f
            ${SRCIPF}/cmde2_txt.f
            ${SRCIPF}/cmde_sum.f
            ${SRCIPF}/cmpltbus.f
            ${SRCIPF}/cntinp.f
            ${SRCIPF}/cnvt_brn.f
            ${SRCIPF}/cnvtld.f
            ${SRCIPF}/cnvtrx.f
            ${SRCIPF}/cnvtwrd.f
            ${SRCIPF}/code.f
            ${SRCIPF}/codex.f
            ${SRCIPF}/comdrp.f
            ${SRCIPF}/compld.f
            ${SRCIPF}/comprs.f
            ${SRCIPF}/cpu_secs.f
            ${SRCIPF}/cputmr.c
            ${SRCIPF}/cpyinbfil.f
            ${SRCIPF}/c_redchg.f
            ${SRCIPF}/csrchn.f
            ${SRCIPF}/csread.f
            ${SRCIPF}/ctlcom.f
            ${SRCIPF}/ctlpow.f
            ${SRCIPF}/curbak.f
            ${SRCIPF}/curjac.f
            ${SRCIPF}/cursol.f
            ${SRCIPF}/cutbr.f
            ${SRCIPF}/cutcom.f
            ${SRCIPF}/cutdat.f
            ${SRCIPF}/cutinp.f
            ${SRCIPF}/cutlis.f
            ${SRCIPF}/cutsys.f
            ${SRCIPF}/cutting_sub.f
            ${SRCIPF}/cxredu.f
            ${SRCIPF}/datlis.f
            ${SRCIPF}/dcdata.f
            ${SRCIPF}/dcfact.f
            ${SRCIPF}/dcfinl.f
            ${SRCIPF}/dcjacb.f
            ${SRCIPF}/dcstrt.f
            ${SRCIPF}/dctopo.f
            ${SRCIPF}/debug.f
            ${SRCIPF}/decplp.f
            ${SRCIPF}/del_brn_tp.f
            ${SRCIPF}/del_cbus.f
            ${SRCIPF}/del_eqbrn.f
            ${SRCIPF}/del_eqcbs.f
            ${SRCIPF}/deleterpt.f
            ${SRCIPF}/deltay.f
            ${SRCIPF}/dfnbse.f
            ${SRCIPF}/dldu.f
            ${SRCIPF}/dldx.f
            ${SRCIPF}/dlflow.f
            ${SRCIPF}/doanlp.f
            ${SRCIPF}/dpdu.f
            ${SRCIPF}/dpdx.f
            ${SRCIPF}/dtasanrpt.f
            ${SRCIPF}/dummy.f
            ${SRCIPF}/dvdu.f
            ${SRCIPF}/dwnbak.f
            ${SRCIPF}/dydb.f
            ${SRCIPF}/edtvlimit.f
            ${SRCIPF}/elimbs.f
            ${SRCIPF}/elimin.f
            ${SRCIPF}/eordr2.f
            ${SRCIPF}/epclup.f
            ${SRCIPF}/epdcin.f
            ${SRCIPF}/equivy.f
            ${SRCIPF}/eqvsec.f
            ${SRCIPF}/ereduc.f
            ${SRCIPF}/erexit.f
            ${SRCIPF}/ermisare.f
            ${SRCIPF}/ermisbus.f
            ${SRCIPF}/evalfn.f
            ${SRCIPF}/evdata.f
            ${SRCIPF}/ex_bus.f
            ${SRCIPF}/ex_file.f
            ${SRCIPF}/ext_ai.f
            ${SRCIPF}/ext_brn.f
            ${SRCIPF}/ext_bus.f
            ${SRCIPF}/ext_gear.f
            ${SRCIPF}/ext_geb.f
            ${SRCIPF}/ext_gedcb.f
            ${SRCIPF}/ext_gedcc.f
            ${SRCIPF}/ext_gedcl.f
            ${SRCIPF}/ext_geg.f
            ${SRCIPF}/ext_geld.f
            ${SRCIPF}/ext_gel.f
            ${SRCIPF}/ext_geown.f
            ${SRCIPF}/ext_geshn.f
            ${SRCIPF}/ext_gesvd.f
            ${SRCIPF}/ext_getrx.f
            ${SRCIPF}/ext_gezdt.f
            ${SRCIPF}/ext_gezon.f
            ${SRCIPF}/ext_pti2.f
            ${SRCIPF}/ext_ptia.f
            ${SRCIPF}/ext_ptib.f
            ${SRCIPF}/ext_ptii.f
            ${SRCIPF}/ext_ptil.f
            ${SRCIPF}/ext_ptim.f
            ${SRCIPF}/ext_ptio.f
            ${SRCIPF}/ext_ptis.f
            ${SRCIPF}/ext_ptix.f
            ${SRCIPF}/ext_ptiz.f
            ${SRCIPF}/fcrvmu.f
            ${SRCIPF}/fcvadd.f
            ${SRCIPF}/fcvcmb.f
            ${SRCIPF}/fcvmul.f
            ${SRCIPF}/fd_gezones.f
            ${SRCIPF}/file_sts.f
            ${SRCIPF}/filtoutrpt.f
            ${SRCIPF}/find_ara.f
            ${SRCIPF}/find_area.f
            ${SRCIPF}/find_base.f
            ${SRCIPF}/find_br.f
            ${SRCIPF}/find_bus.f
            ${SRCIPF}/find_cbs.f
            ${SRCIPF}/find_cmde.f
            ${SRCIPF}/find_del.f
            ${SRCIPF}/findex.f
            ${SRCIPF}/find_hash.f
            ${SRCIPF}/find_index.f
            ${SRCIPF}/find_name.f
            ${SRCIPF}/find_obr.f
            ${SRCIPF}/findoldbus.f
            ${SRCIPF}/findstr.f
            ${SRCIPF}/find_tbx.f
            ${SRCIPF}/find_xara.f
            ${SRCIPF}/find_zon.f
            ${SRCIPF}/finzon.f
            ${SRCIPF}/firstb.f
            ${SRCIPF}/firstxstr.f
            ${SRCIPF}/flmg.f
            ${SRCIPF}/fndpsptr.f
            ${SRCIPF}/fnd_ptia.f
            ${SRCIPF}/fnd_ptian.f
            ${SRCIPF}/fnd_ptib.f
            ${SRCIPF}/fnd_ptic.f
            ${SRCIPF}/fnd_ptin.f
            ${SRCIPF}/fnd_ptio.f
            ${SRCIPF}/fnd_ptiq.f
            ${SRCIPF}/fnd_ptiy.f
            ${SRCIPF}/fnd_ptiz.f
            ${SRCIPF}/frect.f
            ${SRCIPF}/frst_brp_alt.f
            ${SRCIPF}/frst_brp.f
            ${SRCIPF}/fshlbl.f
            ${SRCIPF}/fstout.f
            ${SRCIPF}/ftn_atof.f
            ${SRCIPF}/ftn_atoi.f
            ${SRCIPF}/fvadd.f
            ${SRCIPF}/fvdiv.f
            ${SRCIPF}/fvfill.f
            ${SRCIPF}/fvmov.f
            ${SRCIPF}/fvmul.f
            ${SRCIPF}/fvsma.f
            ${SRCIPF}/fvsub.f
            ${SRCIPF}/fxminv.f
            ${SRCIPF}/fxmxmg.f
            ${SRCIPF}/fxrxrt.f
            ${SRCIPF}/genrpt.f
            ${SRCIPF}/ge_scan.f
            ${SRCIPF}/geta.f
            ${SRCIPF}/getagc.f
            ${SRCIPF}/getaichg.f
            ${SRCIPF}/getare.f
            ${SRCIPF}/get_arno.f
            ${SRCIPF}/getbrchg.f
            ${SRCIPF}/getbschg.f
            ${SRCIPF}/get_cbs.f
            ${SRCIPF}/getchr_8.f
            ${SRCIPF}/getchr.f
            ${SRCIPF}/get_cmde.f
            ${SRCIPF}/getdef.f
            ${SRCIPF}/get_defv.f
            ${SRCIPF}/getdif.f
            ${SRCIPF}/getdrp.f
            ${SRCIPF}/getdte.f
            ${SRCIPF}/getenvir.c
            ${SRCIPF}/getepr.f
            ${SRCIPF}/getid.f
            ${SRCIPF}/get_inrpt3.f
            ${SRCIPF}/get_inrpt4.f
            ${SRCIPF}/get_inrpt5.f
            ${SRCIPF}/getintflo.f
            ${SRCIPF}/getlfo.f
            ${SRCIPF}/getltc.f
            ${SRCIPF}/getmaxdpt.f
            ${SRCIPF}/getmod.f
            ${SRCIPF}/getmxld.f
            ${SRCIPF}/getoldtb.f
            ${SRCIPF}/get_orpt10.f
            ${SRCIPF}/get_orpt13.f
            ${SRCIPF}/get_orpt14.f
            ${SRCIPF}/get_orpt15.f
            ${SRCIPF}/get_orpt16.f
            ${SRCIPF}/get_orpt17.f
            ${SRCIPF}/get_orpt18.f
            ${SRCIPF}/get_orpt19.f
            ${SRCIPF}/get_orpt20.f
            ${SRCIPF}/get_orpt22.f
            ${SRCIPF}/get_otrpt1.f
            ${SRCIPF}/get_otrpt4.f
            ${SRCIPF}/get_otrpt5.f
            ${SRCIPF}/get_otrpt6.f
            ${SRCIPF}/get_otrpt9.f
            ${SRCIPF}/get_outrpt.f
            ${SRCIPF}/getownvlt.f
            ${SRCIPF}/getpq.f
            ${SRCIPF}/getprm.f
            ${SRCIPF}/getput.f
            ${SRCIPF}/getrat.f
            ${SRCIPF}/get_rule.f
            ${SRCIPF}/getsvc.f
            ${SRCIPF}/gettapfp.f
            ${SRCIPF}/gettfo.f
            ${SRCIPF}/gettrf.f
            ${SRCIPF}/get_type.f
            ${SRCIPF}/get_user.f
            ${SRCIPF}/getusr.f
            ${SRCIPF}/getval.f
            ${SRCIPF}/get_volt.f
            ${SRCIPF}/getx1.f
            ${SRCIPF}/getx2.f
            ${SRCIPF}/getxct.f
            ${SRCIPF}/getxsn.f
            ${SRCIPF}/getyeq.f
            ${SRCIPF}/getzkk.f
            ${SRCIPF}/glblim.f
            ${SRCIPF}/glbvlt.f
            ${SRCIPF}/gtaltopt.f
            ${SRCIPF}/gtareint.f
            ${SRCIPF}/gtarofzn.f
            ${SRCIPF}/gtbase.f
            ${SRCIPF}/gtbrtype.f
            ${SRCIPF}/gtbsvolt.f
            ${SRCIPF}/gtcflowi.f
            ${SRCIPF}/gtcflowrefi.f
            ${SRCIPF}/gtchgtyp.f
            ${SRCIPF}/gt_chrcom.f
            ${SRCIPF}/gtcommnt.f
            ${SRCIPF}/gtconnect.f
            ${SRCIPF}/gtcount.f
            ${SRCIPF}/gtfltr.f
            ${SRCIPF}/gt_gebrv.f
            ${SRCIPF}/gtge_num.f
            ${SRCIPF}/gtieflow.f
            ${SRCIPF}/gtinput.f
            ${SRCIPF}/gt_intcom.f
            ${SRCIPF}/gtlfq.f
            ${SRCIPF}/gtlnload.f
            ${SRCIPF}/gtmetpnt.f
            ${SRCIPF}/gtnetdat.f
            ${SRCIPF}/gtnwdcno.f
            ${SRCIPF}/gtoutage.f
            ${SRCIPF}/gtoutput.f
            ${SRCIPF}/gtparalt.f
            ${SRCIPF}/gtparout.f
            ${SRCIPF}/gtpieqiv.f
            ${SRCIPF}/gtptibrv.f
            ${SRCIPF}/gtptibsv.f
            ${SRCIPF}/gtptinam.f
            ${SRCIPF}/gtptinum.f
            ${SRCIPF}/gtsolpar.f
            ${SRCIPF}/gtstatus.f
            ${SRCIPF}/gtsyspar.f
            ${SRCIPF}/gt_ykmltc.f
            ${SRCIPF}/hashbskv.f
            ${SRCIPF}/hashname.f
            ${SRCIPF}/head.f
            ${SRCIPF}/himva.f
            ${SRCIPF}/hndoff.f
            ${SRCIPF}/hotchg.f
            ${SRCIPF}/hsh_ptib.f
            ${SRCIPF}/ickdic.f
            ${SRCIPF}/ickikk.f
            ${SRCIPF}/i_data.f
            ${SRCIPF}/iexit.f
            ${SRCIPF}/ifanal.f
            ${SRCIPF}/ifzo.f
            ${SRCIPF}/inck1vdif.f
            ${SRCIPF}/inck2vdif.f
            ${SRCIPF}/incm1vdif.f
            ${SRCIPF}/incm2vdif.f
            ${SRCIPF}/incr1red.f
            ${SRCIPF}/incr2red.f
            ${SRCIPF}/incrvdif.f
            ${SRCIPF}/inf100.f
            ${SRCIPF}/init_bd_all.f
            ${SRCIPF}/initlz.f
            ${SRCIPF}/input_rpt.f
            ${SRCIPF}/intchcor.f
            ${SRCIPF}/int_dif.f
            ${SRCIPF}/intdte.f
            ${SRCIPF}/interc.f
            ${SRCIPF}/intfce.f
            ${SRCIPF}/inttierpt.f
            ${SRCIPF}/invert.f
            ${SRCIPF}/ipf_fexit.f
            ${SRCIPF}/ipf_intfce.f
            ${SRCIPF}/ipf_reports.f
            ${SRCIPF}/iprint.f
            ${SRCIPF}/ips2ipf_sub.f
            ${SRCIPF}/ipzo.f
            ${SRCIPF}/isolton.f
            ${SRCIPF}/isopt.f
            ${SRCIPF}/itrsum.f
            ${SRCIPF}/ivaln.f
            ${SRCIPF}/jacbfc.f
            ${SRCIPF}/jacbus.f
            ${SRCIPF}/jacltc.f
            ${SRCIPF}/jobseq.f
            ${SRCIPF}/kmpagc.f
            ${SRCIPF}/kmpanl.f
            ${SRCIPF}/kmparc.f
            ${SRCIPF}/kmpari.f
            ${SRCIPF}/kmpbsekv.f
            ${SRCIPF}/kmpbt.f
            ${SRCIPF}/kmpchg.f
            ${SRCIPF}/kmpchgls.f
            ${SRCIPF}/kmpclx.f
            ${SRCIPF}/kmp_cmde2.f
            ${SRCIPF}/kmpcord.f
            ${SRCIPF}/kmpecn.f
            ${SRCIPF}/kmpepb.f
            ${SRCIPF}/kmpepc.f
            ${SRCIPF}/kmpgd1.f
            ${SRCIPF}/kmpgd2.f
            ${SRCIPF}/kmpidx.f
            ${SRCIPF}/kmpjdx.f
            ${SRCIPF}/kmpkal.f
            ${SRCIPF}/kmpkl2.f
            ${SRCIPF}/kmpkol.f
            ${SRCIPF}/kmplt.f
            ${SRCIPF}/kmpmdc.f
            ${SRCIPF}/kmpmps.f
            ${SRCIPF}/kmpmtx.f
            ${SRCIPF}/kmpoldch.f
            ${SRCIPF}/kmpout.f
            ${SRCIPF}/kmpovl.f
            ${SRCIPF}/kmpowner.f
            ${SRCIPF}/kmp_ptib.f
            ${SRCIPF}/kmp_ptiz.f
            ${SRCIPF}/kmpqpn.f
            ${SRCIPF}/kmpr10.f
            ${SRCIPF}/kmprat.f
            ${SRCIPF}/kmprcbus.f
            ${SRCIPF}/kmpred.f
            ${SRCIPF}/kmprt2.f
            ${SRCIPF}/kmpsen.f
            ${SRCIPF}/kmpsrt.f
            ${SRCIPF}/kmptie.f
            ${SRCIPF}/kmptrf.f
            ${SRCIPF}/kmptrl.f
            ${SRCIPF}/kmptrt.f
            ${SRCIPF}/kmptxt.f
            ${SRCIPF}/kmpuvov.f
            ${SRCIPF}/kmpvalue.f
            ${SRCIPF}/kmpvar.f
            ${SRCIPF}/kmpvlimit.f
            ${SRCIPF}/kmpvltdif.f
            ${SRCIPF}/kmpvlt.f
            ${SRCIPF}/kmp_wydt.f
            ${SRCIPF}/kmpymx.f
            ${SRCIPF}/kmpzone.f
            ${SRCIPF}/kmtxbs.f
            ${SRCIPF}/kombus.f
            ${SRCIPF}/komcbs.f
            ${SRCIPF}/komcbx.f
            ${SRCIPF}/komozs.f
            ${SRCIPF}/kompai.f
            ${SRCIPF}/komparbr.f
            ${SRCIPF}/komp_br2.f
            ${SRCIPF}/komp_buf.f
            ${SRCIPF}/komp_bus.f
            ${SRCIPF}/komp_cb2.f
            ${SRCIPF}/komp_cmde.f
            ${SRCIPF}/komp_del.f
            ${SRCIPF}/kompef.f
            ${SRCIPF}/kompr.f
            ${SRCIPF}/komprs.f
            ${SRCIPF}/kompsrt2.f
            ${SRCIPF}/kompsv.f
            ${SRCIPF}/komp_text.f
            ${SRCIPF}/komptx.f
            ${SRCIPF}/komp_txt1.f
            ${SRCIPF}/komp_txt2.f
            ${SRCIPF}/kompxai.f
            ${SRCIPF}/komp_ykm.f
            ${SRCIPF}/komxdt.f
            ${SRCIPF}/kotxef.f
            ${SRCIPF}/kpoldt.f
            ${SRCIPF}/kp_outcmd2.f
            ${SRCIPF}/kpovll.f
            ${SRCIPF}/kpovlt.f
            ${SRCIPF}/kpovuv.f
            ${SRCIPF}/kp_vltcmd2.f
            ${SRCIPF}/kpx_cmde2.f
            ${SRCIPF}/kpxsrt.f
            ${SRCIPF}/ksrchcor.f
            ${SRCIPF}/lastch.f
            ${SRCIPF}/lcskin.f
            ${SRCIPF}/lcsymm.f
            ${SRCIPF}/ldaltbse.f
            ${SRCIPF}/ldbrdata.f
            ${SRCIPF}/ldbrndfil.f
            ${SRCIPF}/ldcsum.f
            ${SRCIPF}/ld_geait.f
            ${SRCIPF}/ld_geare.f
            ${SRCIPF}/ld_gebdc.f
            ${SRCIPF}/ld_gebrn.f
            ${SRCIPF}/ld_gebus.f
            ${SRCIPF}/ld_gecdc.f
            ${SRCIPF}/ld_gegen.f
            ${SRCIPF}/ld_geldc.f
            ${SRCIPF}/ld_geld.f
            ${SRCIPF}/ld_geltc.f
            ${SRCIPF}/ld_gemtr.f
            ${SRCIPF}/ld_geown.f
            ${SRCIPF}/ld_geshn.f
            ${SRCIPF}/ld_gesvd.f
            ${SRCIPF}/ld_getrn.f
            ${SRCIPF}/ld_gezdt.f
            ${SRCIPF}/ld_gezones.f
            ${SRCIPF}/ld_gezon.f
            ${SRCIPF}/ldoldbse.f
            ${SRCIPF}/ldoosfile.f
            ${SRCIPF}/ldpti2dc.f
            ${SRCIPF}/ldptiare.f
            ${SRCIPF}/ldptibrn.f
            ${SRCIPF}/ldptibus.f
            ${SRCIPF}/ldptigen.f
            ${SRCIPF}/ldptiint.f
            ${SRCIPF}/ldptild.f
            ${SRCIPF}/ldptiltc.f
            ${SRCIPF}/ldptimdc.f
            ${SRCIPF}/ldptiown.f
            ${SRCIPF}/ldptisec.f
            ${SRCIPF}/ldptitrn.f
            ${SRCIPF}/ldptixdt.f
            ${SRCIPF}/ldptizon.f
            ${SRCIPF}/ldshoosfil.f
            ${SRCIPF}/lfdcpu.f
            ${SRCIPF}/lfodifrpt.f
            ${SRCIPF}/lindifrpt.f
            ${SRCIPF}/lineflowxl.f
            ${SRCIPF}/linfloanl.f
            ${SRCIPF}/linflo.f
            ${SRCIPF}/linflorpt.f
            ${SRCIPF}/linimp.f
            ${SRCIPF}/linkcbus.f
            ${SRCIPF}/link_own.f
            ${SRCIPF}/link_zbo.f
            ${SRCIPF}/linsen.f
            ${SRCIPF}/lis_cmde2.f
            ${SRCIPF}/lis_cmde.f
            ${SRCIPF}/list_pfd.f
            ${SRCIPF}/ljstfy.f
            ${SRCIPF}/lkbrdata.f
            ${SRCIPF}/lksrtbrnd.f
            ${SRCIPF}/lkstep.f
            ${SRCIPF}/loadarcv.f
            ${SRCIPF}/loadarea.f
            ${SRCIPF}/loadbase.f
            ${SRCIPF}/loadbus.f
            ${SRCIPF}/loadcc.f
            ${SRCIPF}/loaddc.f
            ${SRCIPF}/load_fltr.f
            ${SRCIPF}/load_ge.f
            ${SRCIPF}/load_pti.f
            ${SRCIPF}/lodepr.f
            ${SRCIPF}/lodsol.f
            ${SRCIPF}/lossen.f
            ${SRCIPF}/lossenrpt.f
            ${SRCIPF}/lp.f
            ${SRCIPF}/l_redchg.f
            ${SRCIPF}/ltcadj.f
            ${SRCIPF}/ltcctl.f
            ${SRCIPF}/ltcsum.f
            ${SRCIPF}/merge_diff.f
            ${SRCIPF}/mergi2.f
            ${SRCIPF}/mergtx.f
            ${SRCIPF}/mod_brn.f
            ${SRCIPF}/mod_bus.f
            ${SRCIPF}/mod_cbus.f
            ${SRCIPF}/mod_pqdt.f
            ${SRCIPF}/mod_xdta.f
            ${SRCIPF}/mover.f
            ${SRCIPF}/movnew.f
            ${SRCIPF}/mrgbse.f
            ${SRCIPF}/mvbrde.f
            ${SRCIPF}/mvbude.f
            ${SRCIPF}/mvcbde.f
            ${SRCIPF}/mvchbr.f
            ${SRCIPF}/mvchbu.f
            ${SRCIPF}/mvchcb.f
            ${SRCIPF}/mvchpq.f
            ${SRCIPF}/mvchxd.f
            ${SRCIPF}/mvqpde.f
            ${SRCIPF}/mvxdde.f
            ${SRCIPF}/n_date.f
            ${SRCIPF}/net_data_sub.f
            ${SRCIPF}/new_bsnm.f
            ${SRCIPF}/newfrm.f
            ${SRCIPF}/newptibs.f
            ${SRCIPF}/newvec.f
            ${SRCIPF}/new_znnm.f
            ${SRCIPF}/next_brp_alt.f
            ${SRCIPF}/next_brp.f
            ${SRCIPF}/nragc.f
            ${SRCIPF}/nrarea.f
            ${SRCIPF}/nrbase.f
            ${SRCIPF}/nrbksl.f
            ${SRCIPF}/nrcnvt.f
            ${SRCIPF}/nrdc.f
            ${SRCIPF}/nrdclp.f
            ${SRCIPF}/nrdvdq.f
            ${SRCIPF}/nrpqv.f
            ${SRCIPF}/nrqlim.f
            ${SRCIPF}/nrqpct.f
            ${SRCIPF}/nrsoln.f
            ${SRCIPF}/nrtxaj.f
            ${SRCIPF}/nrtx.f
            ${SRCIPF}/nrycmp.f
            ${SRCIPF}/nschrt.f
            ${SRCIPF}/n_secs.f
            ${SRCIPF}/n_time.f
            ${SRCIPF}/number.f
            ${SRCIPF}/numbrn.f
            ${SRCIPF}/nx_date.f
            ${SRCIPF}/nxt_bufln.f
            ${SRCIPF}/nxt_term.f
            ${SRCIPF}/obcddat.f
            ${SRCIPF}/obus_type.f
            ${SRCIPF}/oermisbus.f
            ${SRCIPF}/ogetdef.f
            ${SRCIPF}/ogetmxld.f
            ${SRCIPF}/ogetrat.f
            ${SRCIPF}/ogtlnload.f
            ${SRCIPF}/oldbsh.f
            ${SRCIPF}/open_apnd.f
            ${SRCIPF}/open_file.f
            ${SRCIPF}/opieqiv.f
            ${SRCIPF}/opnfila.f
            ${SRCIPF}/opnfil.f
            ${SRCIPF}/opsln1.f
            ${SRCIPF}/opsln3.f
            ${SRCIPF}/opsln5.f
            ${SRCIPF}/opstep.f
            ${SRCIPF}/optsiz.f
            ${SRCIPF}/orei.f
            ${SRCIPF}/orienttx.f
            ${SRCIPF}/osorto.f
            ${SRCIPF}/otext.f
            ${SRCIPF}/outage.f
            ${SRCIPF}/outage_lst.f
            ${SRCIPF}/out_brn.f
            ${SRCIPF}/out_bus.f
            ${SRCIPF}/out_cbs.f
            ${SRCIPF}/out_cmde.f
            ${SRCIPF}/outdbg.f
            ${SRCIPF}/outlis.f
            ${SRCIPF}/output.f
            ${SRCIPF}/output_rpt.f
            ${SRCIPF}/outputrpt.f
            ${SRCIPF}/outreport.f
            ${SRCIPF}/out_xbs.f
            ${SRCIPF}/ovextx.f
            ${SRCIPF}/ovldlnsrpt.f
            ${SRCIPF}/ovldtxsrpt.f
            ${SRCIPF}/owner.f
            ${SRCIPF}/owner_hash.f
            ${SRCIPF}/owner_list.f
            ${SRCIPF}/ownintchg.f
            ${SRCIPF}/ownsch.f
            ${SRCIPF}/ownsenrpt.f
            ${SRCIPF}/p_agc.f
            ${SRCIPF}/pa_odif.f
            ${SRCIPF}/parse_bus.f
            ${SRCIPF}/p_cdproc.f
            ${SRCIPF}/p_change.f
            ${SRCIPF}/p_chgbty.f
            ${SRCIPF}/p_chgpar.f
            ${SRCIPF}/p_cmde2.f
            ${SRCIPF}/p_cnvtld.f
            ${SRCIPF}/p_ctlpow.f
            ${SRCIPF}/pf_cmd.f
            ${SRCIPF}/pfinit.f
            ${SRCIPF}/pflbeg.f
            ${SRCIPF}/pflend.f
            ${SRCIPF}/pf_odif.f
            ${SRCIPF}/pfopen.f
            ${SRCIPF}/pf_output.f
            ${SRCIPF}/p_fstout.f
            ${SRCIPF}/p_gendrp.f
            ${SRCIPF}/p_gtardata.f
            ${SRCIPF}/p_gtbase.f
            ${SRCIPF}/p_gtcmde2.f
            ${SRCIPF}/p_gtdata.f
            ${SRCIPF}/p_gtnetdat.f
            ${SRCIPF}/p_gtxardta.f
            ${SRCIPF}/phasum.f
            ${SRCIPF}/phshftrpt.f
            ${SRCIPF}/phssenrpt.f
            ${SRCIPF}/pieqiv.f
            ${SRCIPF}/p_initdef.f
            ${SRCIPF}/pkqk1.f
            ${SRCIPF}/p_ldardata.f
            ${SRCIPF}/p_ldxardta.f
            ${SRCIPF}/p_lic.f
            ${SRCIPF}/p_loaddef.f
            ${SRCIPF}/plot_load.f
            ${SRCIPF}/p_newbse.f
            ${SRCIPF}/pofrpt.f
            ${SRCIPF}/postara.f
            ${SRCIPF}/postbrn.f
            ${SRCIPF}/postbus.f
            ${SRCIPF}/postcmnt.f
            ${SRCIPF}/postcord.f
            ${SRCIPF}/postdraw.f
            ${SRCIPF}/postint.f
            ${SRCIPF}/postpost.f
            ${SRCIPF}/postsl.f
            ${SRCIPF}/postucmt.f
            ${SRCIPF}/p_pfexit.f
            ${SRCIPF}/p_pfinit.f
            ${SRCIPF}/p_pfproc.f
            ${SRCIPF}/p_plot.f
            ${SRCIPF}/pp_odif.f
            ${SRCIPF}/p_ptdata.f
            ${SRCIPF}/pqcurv.f
            ${SRCIPF}/pqparl.f
            ${SRCIPF}/pqsort.f
            ${SRCIPF}/prcred.f
            ${SRCIPF}/p_reduct.f
            ${SRCIPF}/p_report.f
            ${SRCIPF}/presln.f
            ${SRCIPF}/prnt_fltr.f
            ${SRCIPF}/probeg.f
            ${SRCIPF}/proc_cmde.f
            ${SRCIPF}/proces.f
            ${SRCIPF}/procse.f
            ${SRCIPF}/proctx.f
            ${SRCIPF}/prodat.f
            ${SRCIPF}/proend.f
            ${SRCIPF}/prohed.f
            ${SRCIPF}/prs_filnam.f
            ${SRCIPF}/prterx.f
            ${SRCIPF}/prt_gehd.f
            ${SRCIPF}/prtime.f
            ${SRCIPF}/prtpkg.f
            ${SRCIPF}/prtprm.f
            ${SRCIPF}/prtptihd.f
            ${SRCIPF}/prttb.f
            ${SRCIPF}/prtusr.f
            ${SRCIPF}/p_solton.f
            ${SRCIPF}/psplot.f
            ${SRCIPF}/p_subdef.f
            ${SRCIPF}/p_svfile.f
            ${SRCIPF}/p_syscal.f
            ${SRCIPF}/ptcommnt.f
            ${SRCIPF}/ptihasha.f
            ${SRCIPF}/ptihashz.f
            ${SRCIPF}/ptihinit.f
            ${SRCIPF}/ptiscan.f
            ${SRCIPF}/puf.f
            ${SRCIPF}/putchr_8.f
            ${SRCIPF}/putchr.f
            ${SRCIPF}/putrat.f
            ${SRCIPF}/pwrflo.f
            ${SRCIPF}/qiksrt.f
            ${SRCIPF}/qpd_dif.f
            ${SRCIPF}/qsrei.f
            ${SRCIPF}/qutdifrpt.f
            ${SRCIPF}/rcheck.f
            ${SRCIPF}/rddac.f
            ${SRCIPF}/rddat.f
            ${SRCIPF}/rddatx.f
            ${SRCIPF}/rddtai.f
            ${SRCIPF}/rdump.f
            ${SRCIPF}/readcr.f
            ${SRCIPF}/readdc.f
            ${SRCIPF}/read_red.f
            ${SRCIPF}/readtx.f
            ${SRCIPF}/read_user.f
            ${SRCIPF}/rebldbse.f
            ${SRCIPF}/rebldzon.f
            ${SRCIPF}/redchgs.f
            ${SRCIPF}/redttl.f
            ${SRCIPF}/reduce.f
            ${SRCIPF}/reduct.f
            ${SRCIPF}/reduction.f
            ${SRCIPF}/regxrpt.f
            ${SRCIPF}/rei.f
            ${SRCIPF}/rename_bus.f
            ${SRCIPF}/reord2.f
            ${SRCIPF}/reordr.f
            ${SRCIPF}/restop.f
            ${SRCIPF}/retopt.f
            ${SRCIPF}/revert.f
            ${SRCIPF}/rgone.f
            ${SRCIPF}/rsopor.f
            ${SRCIPF}/rval.f
            ${SRCIPF}/savecc.f
            ${SRCIPF}/savechgs.f
            ${SRCIPF}/savedc.f
            ${SRCIPF}/save_ged.f
            ${SRCIPF}/save_get.f
            ${SRCIPF}/savenetd.f
            ${SRCIPF}/saveptid.f
            ${SRCIPF}/saveptit.f
            ${SRCIPF}/savewscc.f
            ${SRCIPF}/savopt.f
            ${SRCIPF}/savsln.f
            ${SRCIPF}/scan.f
            ${SRCIPF}/section.f
            ${SRCIPF}/secton.f
            ${SRCIPF}/seekx.f
            ${SRCIPF}/seeky.f
            ${SRCIPF}/sen_bak2.f
            ${SRCIPF}/sen_bph2.f
            ${SRCIPF}/sen_chk2.f
            ${SRCIPF}/sen_chk3.f
            ${SRCIPF}/senchk.f
            ${SRCIPF}/senctl.f
            ${SRCIPF}/sen_cutbr.f
            ${SRCIPF}/sen_cut.f
            ${SRCIPF}/sendec.f
            ${SRCIPF}/sen_dhdx2.f
            ${SRCIPF}/sen_dldx2.f
            ${SRCIPF}/sen_fac2.f
            ${SRCIPF}/sen_fac3.f
            ${SRCIPF}/senfac.f
            ${SRCIPF}/seninp.f
            ${SRCIPF}/sen_jac2.f
            ${SRCIPF}/sen_jac3.f
            ${SRCIPF}/sen_jac3.f.1
            ${SRCIPF}/senjac.f
            ${SRCIPF}/senltc.f
            ${SRCIPF}/sen_out2.f
            ${SRCIPF}/sen_red2.f
            ${SRCIPF}/sensdq.f
            ${SRCIPF}/set_batch.f
            ${SRCIPF}/setercnt.f
            ${SRCIPF}/setgen.f
            ${SRCIPF}/setpqx.f
            ${SRCIPF}/sfctr.f
            ${SRCIPF}/shellsrt.f
            ${SRCIPF}/shift.c
            ${SRCIPF}/sinput.f
            ${SRCIPF}/slnhdr.f
            ${SRCIPF}/solton.f
            ${SRCIPF}/solv_cmde.f
            ${SRCIPF}/solvec.f
            ${SRCIPF}/sortbus.f
            ${SRCIPF}/sortcbus.f
            ${SRCIPF}/sortpqcv.f
            ${SRCIPF}/sort_xdta.f
            ${SRCIPF}/spoldt.f
            ${SRCIPF}/sp_outcmd2.f
            ${SRCIPF}/spovll.f
            ${SRCIPF}/spovlt.f
            ${SRCIPF}/spovuv.f
            ${SRCIPF}/sp_vltcmd2.f
            ${SRCIPF}/spx_cmde2.f
            ${SRCIPF}/spxsrt.f
            ${SRCIPF}/srchtx.f
            ${SRCIPF}/srsfb.f
            ${SRCIPF}/srtbrnch.f
            ${SRCIPF}/srtcord.f
            ${SRCIPF}/srv_fcmdprs.f
            ${SRCIPF}/stats.f
            ${SRCIPF}/storchgs.f
            ${SRCIPF}/stor_del.f
            ${SRCIPF}/stortx.f
            ${SRCIPF}/subdef.f
            ${SRCIPF}/sub_rate.f
            ${SRCIPF}/sumdrp.f
            ${SRCIPF}/sumopt.f
            ${SRCIPF}/sumsol.f
            ${SRCIPF}/svcsum.f
            ${SRCIPF}/swaozs.f
            ${SRCIPF}/swap10.f
            ${SRCIPF}/swapai.f
            ${SRCIPF}/swap_br2.f
            ${SRCIPF}/swap_br.f
            ${SRCIPF}/swapbsekv.f
            ${SRCIPF}/swap_buf.f
            ${SRCIPF}/swap_bus.f
            ${SRCIPF}/swap_cb2.f
            ${SRCIPF}/swapcbus.f
            ${SRCIPF}/swap_cmde.f
            ${SRCIPF}/swap_del.f
            ${SRCIPF}/swapef.f
            ${SRCIPF}/swapowner.f
            ${SRCIPF}/swaps.f
            ${SRCIPF}/swapsrt2.f
            ${SRCIPF}/swapsv.f
            ${SRCIPF}/swaptx.f
            ${SRCIPF}/swap_txt1.f
            ${SRCIPF}/swap_txt2.f
            ${SRCIPF}/swapuvov.f
            ${SRCIPF}/swapxai.f
            ${SRCIPF}/swap_ykm.f
            ${SRCIPF}/swapzone.f
            ${SRCIPF}/switchbx.f
            ${SRCIPF}/swpagc.f
            ${SRCIPF}/swpanl.f
            ${SRCIPF}/swparc.f
            ${SRCIPF}/swpari.f
            ${SRCIPF}/swpbt.f
            ${SRCIPF}/swpbus.f
            ${SRCIPF}/swpcbs.f
            ${SRCIPF}/swpcbx.f
            ${SRCIPF}/swpchg.f
            ${SRCIPF}/swpchgls.f
            ${SRCIPF}/swpclx.f
            ${SRCIPF}/swp_cmde2.f
            ${SRCIPF}/swpcord.f
            ${SRCIPF}/swpecn.f
            ${SRCIPF}/swpepb.f
            ${SRCIPF}/swpepc.f
            ${SRCIPF}/swpgd1.f
            ${SRCIPF}/swpgd2.f
            ${SRCIPF}/swpidx.f
            ${SRCIPF}/swpjdx.f
            ${SRCIPF}/swpkal.f
            ${SRCIPF}/swpkl2.f
            ${SRCIPF}/swpkol.f
            ${SRCIPF}/swplt.f
            ${SRCIPF}/swpmdc.f
            ${SRCIPF}/swpmps.f
            ${SRCIPF}/swpmtx.f
            ${SRCIPF}/swpoldch.f
            ${SRCIPF}/swpout.f
            ${SRCIPF}/swpovl.f
            ${SRCIPF}/swp_ptib.f
            ${SRCIPF}/swp_ptiz.f
            ${SRCIPF}/swpqpn.f
            ${SRCIPF}/swprat.f
            ${SRCIPF}/swpred.f
            ${SRCIPF}/swprt2.f
            ${SRCIPF}/swpsen.f
            ${SRCIPF}/swpsrt.f
            ${SRCIPF}/swptie.f
            ${SRCIPF}/swptrf.f
            ${SRCIPF}/swptrl.f
            ${SRCIPF}/swptrt.f
            ${SRCIPF}/swptxt.f
            ${SRCIPF}/swpvar.f
            ${SRCIPF}/swpvlimit.f
            ${SRCIPF}/swpvltdif.f
            ${SRCIPF}/swpvlt.f
            ${SRCIPF}/swp_wydt.f
            ${SRCIPF}/swpxdt.f
            ${SRCIPF}/swpymx.f
            ${SRCIPF}/swpzon.f
            ${SRCIPF}/swtxbs.f
            ${SRCIPF}/swtxef.f
            ${SRCIPF}/sympha.f
            ${SRCIPF}/sys100.f
            ${SRCIPF}/systxt.f
            ${SRCIPF}/tbx_hash.f
            ${SRCIPF}/tbxhinit.f
            ${SRCIPF}/tieflo.f
            ${SRCIPF}/timoda.f
            ${SRCIPF}/title.f
            ${SRCIPF}/trnchk.f
            ${SRCIPF}/trnfac.f
            ${SRCIPF}/trnjac.f
            ${SRCIPF}/trnsen.f
            ${SRCIPF}/txbsum.f
            ${SRCIPF}/txposebr.f
            ${SRCIPF}/txpose.f
            ${SRCIPF}/type_list.f
            ${SRCIPF}/typesw.f
            ${SRCIPF}/typnam.f
            ${SRCIPF}/typno.f
            ${SRCIPF}/updatetb.f
            ${SRCIPF}/updt_own.f
            ${SRCIPF}/upd_zbol.f
            ${SRCIPF}/updzon.f
            ${SRCIPF}/uscan.f
            ${SRCIPF}/usranlrpt.f
            ${SRCIPF}/usroutrpt.f
            ${SRCIPF}/usrrpt.f
            ${SRCIPF}/varint.f
            ${SRCIPF}/varsum.f
            ${SRCIPF}/vltdifrpt.f
            ${SRCIPF}/vltlim.f
            ${SRCIPF}/vsen.f
            ${SRCIPF}/wrdac.f
            ${SRCIPF}/wrdat.f
            ${SRCIPF}/wrdtao.f
            ${SRCIPF}/writxt.f
            ${SRCIPF}/xallocq.f
            ${SRCIPF}/xbus_dif.f
            ${SRCIPF}/xbusqua.f
            ${SRCIPF}/xbusum.f
            ${SRCIPF}/xcalcintfl.f
            ${SRCIPF}/xdate.f
            ${SRCIPF}/xdscrt.f
            ${SRCIPF}/xgetlfo.f
            ${SRCIPF}/xgettfl.f
            ${SRCIPF}/xgetval.f
            ${SRCIPF}/xgtieflow.f
            ${SRCIPF}/xgtlfq.f
            ${SRCIPF}/xnumbrn.f
            ${SRCIPF}/xout_brn.f
            ${SRCIPF}/xout_bus.f
            ${SRCIPF}/xscan.f
            ${SRCIPF}/xstep.f
            ${SRCIPF}/ycplp.f
            ${SRCIPF}/ycpsum.f
            ${SRCIPF}/ymod_cmde.f
            ${SRCIPF}/ymod.f
            ${SRCIPF}/znsum.f
            ${SRCIPF}/zonedc.f
            ${SRCIPF}/zone_hash.f
            ${SRCIPF}/zone_list.f
            ${SRCIPF}/zone_ren.f
            ${SRCIPF}/zonintchg.f
)

ADD_LIBRARY(${IPFLIB} STATIC ${IPF_src})
