SET(LIBGUI_src 
ai_data.c
autostart.c
base_data.c
busfilter.c
bussect.c
chgdata.c
chgdatatst.c
chkentry.c
cmdprsgcb.c
cmdprsgcu.c
coloredit.c
colorx.c
convert.c
crtlnlst.c
curbus.c
darrowxya.c
disable_h.c
dmgr.c
dmgrdoc.c
doc_procs.c
drawchar.c
drawgadget.c
dump.c
edge.c
edgeg.c
em.c
errdlg.c
execsrv.c
filedlgrtn.c
fixvuit.c
fm.c
fmtpg.c
getrpts.c
gotime.c
graphdata.c
graphpscor.c
gui.c
help_cb.c
initwin.c
ipc_cb.c
ipcclient.c
ipcclntshl.c
ipcsrvstbs.c
ipfdefine.c
ipf_rsrc.c
is_float.c
isvalidp.c
itoa.c
launch_srv.c
line2rect.c
linetap2.c
linetap.c
linezcalc.c
networkedt.c
new_process.c
openfiles.c
pf_cb.c
pf_descrip.c
pqcurve.c
printopts.c
pscordat.c
random.c
reformat.c
reports.c
safe_pscordat.c
selection.c
shift_str.c
slctbus.c
stdlib_ext.c
stringpart.c
str_util.c
substation.c
systemtest.c
toolbox.c
toolmove.c
uscanc.c
utils.c
utils_db.c
vertex.c
)

ADD_LIBRARY(${GUILIB} STATIC ${LIBGUI_src})
